package xyz.cursedman.gym_api.domain.entities;

public enum PaymentStatus {
    PENDING, FAILED, APPROVED
}
